@startuml

title __ITALIANCALENDARWITHTIME's Class Diagram__\n

  namespace com.woonders.lacemsjsf.ui {
    namespace component.italiancalendar {
      namespace ithtime {
        class com.woonders.lacemsjsf.ui.component.italiancalendarwithtime.ItalianCalendarWithTime {
            {static} + COMPONENT_FAMILY : String
            {static} + COMPONENT_TYPE : String
            + ItalianCalendarWithTime()
            + getFamily()
            + getRendererType()
        }
      }
    }
  }
  

  namespace com.woonders.lacemsjsf.ui {
    namespace component.italiancalendar {
      namespace ithtime {
        class com.woonders.lacemsjsf.ui.component.italiancalendarwithtime.ItalianCalendarWithTimeRenderer {
            {static} + RENDERER_TYPE : String
        }
      }
    }
  }
  

  com.woonders.lacemsjsf.ui.component.italiancalendarwithtime.ItalianCalendarWithTime -up-|> org.primefaces.component.calendar.Calendar
  com.woonders.lacemsjsf.ui.component.italiancalendarwithtime.ItalianCalendarWithTimeRenderer -up-|> org.primefaces.component.calendar.CalendarRenderer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
